@@ -1,3 +1,4 @@
+etc/xdg/cantor_scilab.knsrc
 usr/lib/*/qt5/plugins/cantor/backends/cantor_scilabbackend.so
 usr/share/config.kcfg/scilabbackend.kcfg
 usr/share/icons/hicolor/48x48/apps/scilabbackend.png
