@@ -17,14 +17,6 @@ override_dh_auto_install:
 	rm -rf debian/tmp/usr/include/cantor/
 	find debian/tmp -name '*.so' -type l -delete
 
-override_dh_install:
-	$(overridden_command)
-	# The luajit is available only in amd64 and i386 for now
-	if [ -f debian/tmp/etc/xdg/cantor_lua.knsrc ]; then \
-	    mkdir -p debian/cantor/etc/xdg; \
-	    cp debian/tmp/etc/xdg/cantor_lua.knsrc debian/cantor/etc/xdg; \
-	fi
-
 override_dh_makeshlibs:
 	$(overridden_command) -V
 
