@@ -11,6 +11,8 @@ cantor (4:17.08.3-0r1) UNRELEASED; urgency=medium
   * Drop the cantor-dev package, since cantor does not provide stable API/ABI
     for its libraries, and the current packaging does not support well
     dependencies.
+  * Move backend-specific files to their own packages
+    - add proper breaks/replaces
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 02 Dec 2017 10:13:24 +0100
 
